--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@ a:hover {
   color: var(--pink) !important;
 }
 
+a.ant-typography, .ant-typography a, a {
+  color: #E85A4F !important;
+}
+
 .app {
   display: flex;
   overflow: hidden;
@@ -24,7 +28,7 @@ a:hover {
 
 .navbar {
   flex: 0.2;
-  background-color: rgb(0, 21, 41);
+  background-color: #EAE7DC;
 }
 
 .main {
@@ -40,11 +44,11 @@ a:hover {
   margin: 10px;
   height: 100vh;
   margin: 0px;
-  background-color: rgb(0, 21, 41);
+  background-color: #EAE7DC;
 }
 
 .logo-container {
-  background-color: #001529;
+  background-color: #EAE7DC;
   display: flex;
   padding: 20px;
   align-items: center;
@@ -157,6 +161,22 @@ a:hover {
   opacity: 0.9;
   margin-bottom: 20px;
 }
+
+.ant-menu-inline, .ant-menu-vertical, .ant-menu-vertical-left {
+    border-right: none !important
+}
+
+.ant-layout {
+  background-color: #ffffff !important;
+}
+
+.ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
+    background-color: #fdfcf5eb !important;
+}
+
+.ant-select-selection-search .ant-select-selection-search-input {
+  cursor: pointer !important;
+} 
 
 .stats-container {
   display: flex;
@@ -369,7 +389,7 @@ a:hover {
 }
 
 .footer {
-  background-color: #001529;
+  background-color: #EAE7DC;
   display: flex;
   flex-direction: column;
   padding: 20px;
